Fix padding on buttons scaling too much

--- a/style.css
+++ b/style.css
@@ -165,7 +165,7 @@ a {
   background-color: var(--primary);
   color: var(--white);
   border-radius: 20px;
-  padding: 10px 8%;
+  padding: 10px 20px;
   width: 100px;
   text-align: center;
 }
